Added packages and tutorials

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,15 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Pip-Build
+dist
+*.egg-info
+
 # Filesystem
 .DS_Store
+
+#Jupyter
+.ipynb_checkpoints
 
 # VSCode
 /.vscode
