Changed README and added support for AGTE

--- a/package/setup.cfg
+++ b/package/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = tf-ate
-version = 1.0.2
+version = 1.0.5
 author = Tjark Prokoph
 author_email = tjark.prokoph@gmx.de
-description = Approximate Text Explaination
+description = Approximate Text Explanation
 long_description = file: README.md, LICENSE.txt
 long_description_content_type = text/markdown
 url = https://github.com/tjarkpr/ate
